fix: z-index

--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -4,6 +4,7 @@ header {
     background-color: var(--background-opacity);
     border-bottom: solid var(--font) var(--border);
     backdrop-filter: blur(var(--blur));
+    z-index: 2;
 }
 
 header nav {
