--- a/styles/pages/install.css
+++ b/styles/pages/install.css
@@ -21,7 +21,7 @@ div#install div.os {
     backdrop-filter: blur(var(--blur));
     box-shadow: 0 1rem 1rem var(--shadow);
     margin-bottom: 2rem;
-    z-index: -1;
+    z-index: 1;
 }
 
 div#install div.os h2 {
